# betty-2

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/betty/: __init__.py  approval.py  claude_md.py  cli.py  config.py  daemon.py  db.py  escalation.py  hook_handler.py  hooks.py  intent_engine.py  llm.py  models.py  policy.py  session_analyzer.py  session_reader.py  session_search.py  telegram_bot.py  user_model.py
src/betty/server/: __init__.py  app.py  dashboard.py  hooks.py  models.py
src/betty/static/: style.css
src/betty/templates/: approvals.html  base.html  home.html  policies.html  session_detail.html  sessions.html  settings.html  user_model.html
src/betty/templates/partials/: approval_suggestions.html  approvals_list.html  home_prefs.html  home_sessions.html  home_stats.html  policies_list.html  preferences_table.html  sessions_list.html
tests/: conftest.py  test_approval.py  test_claude_md.py  test_config.py  test_daemon.py  test_db.py  test_escalation.py  test_hook_handler.py  test_hooks.py  test_intent_engine.py  test_llm.py  test_policy.py  test_server.py  test_session_analyzer.py  test_session_reader.py  test_session_search.py  test_telegram_bot.py  test_user_model.py
