[project]
name = "betty-cli"
dynamic = ["version"]
description = "A peer programming agent for Claude Code"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "litellm>=1.50",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "aiosqlite>=0.20",
    "rich>=13.0",
    "python-telegram-bot>=21.0",
]

[project.scripts]
betty = "betty.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/betty/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/betty"]

[tool.hatch.build.targets.sdist]
include = ["src/betty"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.27",
]
